<resources>
    <string name="app_name">Ruházati webshop</string>
    <string name="felhasznalonev">Felhasználónév</string>
    <string name="jelszo">Jelszó</string>
    <string name="bejelentkezes">Bejelentkezés</string>
    <string name="bejelentkezes_cime">Bejelentkezés</string>
    <string name="regisztracio_gomb">Regisztráció</string>
    <string name="reg_cime">Regisztráció</string>
    <string name="email">E-mail cím</string>
    <string name="kijelentkezes">Kijelentkezés</string>
    <string name="jelszo_ujjra">Jelszó újra</string>
    <string name="udv">Üdvözöljük alkalmazásunkban!</string>
    <string name="vasarlas">Ruhákban gazdag vásárlást kívánunk!</string>
    <string name="vasarlas_gomb">Vásárlás</string>
    <string name="kinalat">Kínálatunk</string>
    <string name="product_description">Termék leíráa</string>
    <string name="default_web_client_id">206750863000-q3gvahk8q1g50vlpmhmulujjuvbevme2.apps.googleusercontent.com.apps.googleusercontent.com</string>
    <string name="vendeg">Vendégként belépés</string>
    <string name="szerkesztes">Profil szerkesztése</string>
    <string name="torles">Fiók törlése</string>
    <string name="profilkep">Profilkép</string>
    <string name="nev">Név:</string>
    <string name="emailszoveg">Email:</string>
    <string name="mentes">Mentés</string>

    <string-array name="rendezesi_opciok">
        <item>A-Z</item>
        <item>Z-A</item>
        <item>Legolcsóbb elöl</item>
        <item>Legdrágább elöl</item>
    </string-array>
</resources>